docs(datePicker): update date picker related documentation

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -662,3 +662,7 @@ The `theme` property was removed since the component accesses the theme object i
 ### Code editor <a id="code-editor" />
 
 The `theme` property was removed since the component accesses the theme object internally.
+
+### DatePicker <a id="date-picker" />
+
+The locale must be passed as a prop as the component no longer reads the locale from the provider.
