feat: color picker promoted to core

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -439,6 +439,7 @@ In v5.x the components below were promoted from the lab to the core package:
 - Inline editor
 - Time ago
 - Vertical navigation
+- Color picker
 
 In order to use them, you'll need to update the necessary imports. Please find an example below.
 
