docs: migration guide updated

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -8,7 +8,7 @@ The NEXT UI Kit v5 is one of our most ambitious release to date. In this version
 Design System and UI Kit releases as well as improve our customization capabilities. In this sense, UI Kit v5 introduces the concept of **white labeling**
 which enables the use of the UI Kit in different design scenarios to seamlessly meet clients' needs.
 
-In this new version, we also reviewed the **components to be fully compliant with the most recent guidelines of the latest Design System v5 release**. Furthermore,
+In this new version, we also reviewed the **components to be compliant with the most recent guidelines of the latest Design System v5 release**. Furthermore,
 we also took the opportunity to **migrate our packages from MUI's JSS styling system to Emotion**. This change was due mainly to performance benefits
 introduced by using Emotion over JSS.
 
