docs: add migration

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -42,6 +42,7 @@ Here's what there is to know about this migration:
   - [Code editor](#code-editor)
   - [Date picker](#date-picker)
   - [Color picker](#color-picker)
+  - [Carousel](#carousel)
 
 ## React packages <a id="react-packages" />
 
@@ -700,3 +701,40 @@ use the DS3 version, the component can easily be customized to meet the guidelin
 - `onSavedColorAdded`
 - `onSavedColorRemoved`
 - `deleteSavedColorButtonArialLabel`
+
+### Carousel <a id="carousel" />
+
+The `HvImageCarousel` component was renamed to `HvCarousel`. It can now scroll through any type of content.
+
+**Props:**
+
+- `variant` removed (unused)
+- `counter` renamed to `showCounter`
+- `fullscreen` renamed to `showFullscreen`
+- `visibleArrows` renamed to `showSlideControls`
+- `lowCardinality` renamed to `showDots` (automatic default)
+- `thumbnails` renamed to `showThumbnails`
+- `documents` removed (see below)
+
+To render Carousel slides, you now need to use the `children` prop, instead of `documents`, using the `HvCarouselSlide` component.
+Either pass `img` props (ie `<HvCarouselSlide src={src} alt={alt} />`) or custom children:
+
+```tsx
+<HvCarouselSlide>
+  custom content!
+  <video />
+  <img />
+  <HvTypography />
+</HvCarouselSlide>
+```
+
+```diff
+const images = ["img1.png", "img2.png", "img3.png"];
+
+-<HvImageCarousel
+-  documents={images.map((src) => ({src}))}
+-/>
++<HvCarousel renderThumbnail={(i) => (<img src={images[i]} />)}>
++  {images.map((src) => <HvCarouselSlide src={src} />)}
++</HvCarousel>
+```
