chore: address review

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -58,7 +58,6 @@ application at the moment since their development are still in progress. Over ti
 - `@hitachivantara/uikit-react-viz`
 - The following components from `@hitachivantara/uikit-react-lab` are missing:
   - Drawer
-  - Image carrousel
   - Navigation anchors
   - Notification panel
 - The following components from `@hitachivantara/uikit-react-core` are missing:
@@ -441,6 +440,7 @@ In v5.x the components below were promoted from the lab to the core package:
 - Time ago
 - Vertical navigation
 - Color picker
+- Carousel
 
 In order to use them, you'll need to update the necessary imports. Please find an example below.
 
@@ -456,6 +456,7 @@ In v5.x some components and types were renamed as detailed in the table below.
 | Type or component | v4.x                   | v5.x                       |
 | ----------------- | ---------------------- | -------------------------- |
 | Component         | HvBreadcrumb           | HvBreadCrumb               |
+| Component         | HvImageCarousel        | HvCarousel                 |
 | Type              | NavigationItemProp     | HvHeaderNavigationItemProp |
 | Type              | ListValueProp          | HvListValue                |
 | Type              | ListLabelsProp         | HvListLabels               |
