fix: styles not apllying in first render

--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -743,7 +743,7 @@ const images = ["img1.png", "img2.png", "img3.png"];
 
 ### Table Renderer - hvExpandColumn <a id="table-renderer-expand-column" />
 
-The default icon for this component has changed to the one specified in DS5 specifications, in order to be possible to revert to the previous icon or customize to any other, the following properties where added:
+The default icon for this component has changed to the one specified in DS5 specifications, in order to be possible to revert to the previous icon or customize to any other, the following properties were added:
 
-- `isExpandedIcon`
-- `isCollapsedIcon`
+- `ExpandedIcon`
+- `CollapsedIcon`
