--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -443,6 +443,7 @@ In v5.x the components below were promoted from the lab to the core package:
 - Vertical navigation
 - Color picker
 - Carousel
+- Drawer
 
 In order to use them, you'll need to update the necessary imports. Please find an example below.
 
