--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -44,6 +44,7 @@ Here's what there is to know about this migration:
   - [Color picker](#color-picker)
   - [Carousel](#carousel)
   - [Table Renderer - Expand Column](#table-renderer-expand-column)
+  - [Drawer](#drawer)
 
 ## React packages <a id="react-packages" />
 
@@ -442,6 +443,7 @@ In v5.x the components below were promoted from the lab to the core package:
 - Vertical navigation
 - Color picker
 - Carousel
+- Drawer
 
 In order to use them, you'll need to update the necessary imports. Please find an example below.
 
@@ -749,3 +751,9 @@ The default icon for this component has changed to the one specified in DS5 spec
 
 - `ExpandedIcon`
 - `CollapsedIcon`
+
+### Drawer <a id="drawer" />
+
+This component was moved from the lab to the core package in this ui-kit version.
+In the story of this component in the previous uikit version we used a prop called: `disableBackdropClick`,
+this prop was deprecated by the underlining component from material ui and you should use `onClose` instead.
