--- a/docs/overview/status/ProjectStatus.stories.mdx
+++ b/docs/overview/status/ProjectStatus.stories.mdx
@@ -35,21 +35,22 @@ NEXT UI Kit supports the latest, stable releases of all major browsers and platf
 
 ## Packages <a id="packages" />
 
-At the moment, UI Kit v5.x has not available all v4.x packages. We are actively working toward aligning the missing packages with v5.x and they will be released as soon as they are ready, following our [**release cycle**](/docs/overview-community-releases--page) rules.
+In UI Kit v5.x some packages were deprecated and new ones were created as shown in the table below.
 
 Bear in mind that v4.x and v5.x packages can't be used simultaneously due to the introduction of the new theming system not compatible with the v4.x components.
+Thus, if you wish to keep using the deprecated packages, you can't update the other packages to v5.x.
 
-| Package                                 |    Status     |
-| --------------------------------------- | :-----------: |
-| @hitachivantara/uikit-react-core        |      ✅       |
-| @hitachivantara/uikit-react-icons       |      ✅       |
-| @hitachivantara/uikit-react-shared      |      ✅       |
-| @hitachivantara/uikit-styles            |      ✅       |
-| @hitachivantara/uikit-react-lab         |      ✅       |
-| @hitachivantara/uikit-react-viz         | `in progress` |
-| @hitachivantara/uikit-react-code-editor |      ✅       |
-| @hitachivantara/uikit-react-compat      | `deprecated`  |
-| @hitachivantara/uikit-common-themes     | `deprecated`  |
+| Package                                 |    Status    |
+| --------------------------------------- | :----------: |
+| @hitachivantara/uikit-react-core        |  `updated`   |
+| @hitachivantara/uikit-react-icons       |  `updated`   |
+| @hitachivantara/uikit-react-lab         |  `updated`   |
+| @hitachivantara/uikit-react-viz         |  `updated`   |
+| @hitachivantara/uikit-react-code-editor |  `updated`   |
+| @hitachivantara/uikit-react-shared      |    `new`     |
+| @hitachivantara/uikit-styles            |    `new`     |
+| @hitachivantara/uikit-react-compat      | `deprecated` |
+| @hitachivantara/uikit-common-themes     | `deprecated` |
 
 ## Components <a id="components" />
 
