--- a/docs/overview/migration/MigrationV5.stories.mdx
+++ b/docs/overview/migration/MigrationV5.stories.mdx
@@ -537,10 +537,10 @@ Regarding styling capabilities, this library is more flexible and Design System 
 sampling features not rendering sub-pixel points when handling large amounts of data.
 
 Furthermore, we also use [Arquero](https://uwdata.github.io/arquero/api/), which is a library for query processing and data tables transformation,
-to manipulate and transform data points. Thus, in v5.x, the visualizations are able to manipulate your data if necessary by splitting, grouping,
+to manipulate and transform data points. Thus, in v5.x, the visualizations are able to manipulate your data if necessary by splitting, grouping, sorting,
 and aggregating data points.
 
-For more information about how to use the new visualizations, please take a look at the [visualizations guide](/docs/guides-visualizations--page).
+For more information about how to get started with the visualizations, please take a look at the [visualizations guide](/docs/guides-visualizations--page).
 
 ## Breaking changes and deprecated values in components <a id="breaking-changes-deprecated-components" />
 
