feat(LineChart): docs updated

--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -142,8 +142,8 @@ The valid values are `continuous` for continuous data, `categorical` for discret
 
 In order to create visualizations, you'll also need to define visual roles for your data table columns. The following visual roles are supported:
 
-- `groupBy`: this visual role will be used for the chart's horizontal axis. The data will be grouped based on the columns selected for this visual role.
-- `measures`: this visual role will be used for the chart's vertical axis. These are the columns that you want to measure. For each one of the selected columns, you can
+- `groupBy`: the data will be grouped based on the columns selected for this visual role.
+- `measures`: columns that you want to measure on the chart. For each one of the selected columns, you can
   choose a function to aggregate the values. When no aggregation function is specified, the values will be summed by default.
   The valid aggregation functions are `sum`, `average`, `min`, `max`, and `count`.
 - `splitBy`: splits your data based on specific data table columns.
