feat(BarChart): bar chart added

--- a/docs/guides/visualizations/Visualizations.stories.mdx
+++ b/docs/guides/visualizations/Visualizations.stories.mdx
@@ -11,6 +11,7 @@ At the moment, the following visualizations are available and we are continuousl
 
 - [KPI](/docs/visualizations-kpi--main)
 - [Line chart](/docs/visualizations-line-chart--main)
+- [Bar chart](/docs/visualizations-bar-chart--main)
 
 The KPI component is available on the `uikit-react-core` package while all the other visualizations are in the `uikit-react-viz` package.
 
