docs: upgrade to storybook 7

--- a/docs/overview/status/ProjectStatus.stories.mdx
+++ b/docs/overview/status/ProjectStatus.stories.mdx
@@ -60,7 +60,7 @@ The following table shows the components alignment with **NEXT DS 5.6.0** and th
 
 If you need a component or feature that is not supported, please reach out to us or check our [contribution guide](/docs/overview-community-contributing--page).
 
-<>
+<div>
   {Object.entries(data).map(([key, value]) => (
     <table>
       <thead>
@@ -83,4 +83,4 @@ If you need a component or feature that is not supported, please reach out to us
       </tbody>
     </table>
   ))}
-</>
+</div>
